--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Theme Park</title>
   <!-- Link to stylesheets -->
+  <link rel= "stylesheet" href= "css/style.css">
   <!-- Link to favicon -->
 </head>
 <body>
