feat: Add HTML for Home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,127 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park</title>
-    <!-- Link to stylesheets  -->
-    <link rel= "stylesheet" href= "css/style.css">
+    <title>Candyland</title>
+    <!-- Link to favicon and stylesheets  -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Link to favicon -->
   </head>
   <body>
+    <!-- Menu bar -->
+    <nav>
+      <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
+      <a href="/attractions">Attractions</a>
+      <!-- TODO: Change to disabled link -->
+      <a href="/tickets">Tickets</a>
+      <!-- TODO: Change to disabled link -->
+      <a href="/shop">Shop</a>
+      <span>Profile</span>
+      <button>Contact us</button>
+    </nav>
+
+    <hr>
+
     <main>
-      <h1>Welcome to Theme Park</h1>
+      <header>
+        <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
+        <button id="tickets">Buy tickets</button>
+      </header>
+
+      <hr>
+
+      <!-- Welcome to Candyland -->
+      <section id="welcome">
+        <h1>Candyland</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
+        </p>
+      </section>
+
+      <hr>
+
+      <section id="attractions">
+        <h2>Attractions</h2>
+        <div>
+          <div class="attraction">
+            <h3>Chocolate Fondue Ride</h3>
+            <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Chocolate Fondue Ride">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          <div class="attraction">
+            <h3>Sugar Mountain Rollercoaster</h3>
+            <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Sugar Mountain Rollercoaster">
+            <p>
+              Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet.
+            </p>
+          </div>
+          <div class="attraction">
+            <h3>Candyland Factory Tour</h3>
+            <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Candyland Factory Tour">
+            <p>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+      <section id="social">
+        <div>
+          <h3>
+            Comments and reviews
+          </h3>
+        </div>
+        <div>
+          <h3>
+            Park news
+          </h3>
+        </div>
+      </section>
+
+      <hr
+
+        <footer>
+      <div>
+        <h4>Things to do</h4>
+        <ul>
+          <li>Lorem</li>
+          <li>Ipsum</li>
+          <li>Dolor sit amet</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Plan your visit</h4>
+        <ul>
+          <li>Duis aute</li>
+          <li>Irure dolor</li>
+          <li>In reprehenderit in voluptate</li>
+          <li>Totam rem aperiam</li>
+          <li>Anim id est laborum</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Support</h4>
+        <ul>
+          <li>Excepteur</li>
+          <li>Sint occeacat</li>
+          <li>Cupidatat non proident</li>
+          <li>Adipisci velit</li>
+        </ul>
+      </div>
+      <div>
+        <h4>About us</h4>
+        <ul>
+          <li>Neque porro</li>
+          <li>Quisquam est</li>
+          <li>Qui dolorem ipsum</li>
+        </ul>
+      </div>
+  </footer>
     </main>
   </body>
 </html>
