--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,9 @@
     <!-- Menu bar -->
     <nav>
       <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
-      <a href="/attractions">Attractions</a>
-      <!-- TODO: Change to disabled link -->
-      <a href="/tickets">Tickets</a>
-      <!-- TODO: Change to disabled link -->
+      <a href="/">Home</a>
+      <span class="disabled-link">Attractions</span>
+      <span class="disabled-link">Tickets</span>
       <a href="/shop">Shop</a>
       <span>Profile</span>
       <button>Contact us</button>
@@ -46,13 +45,15 @@
       <section id="attractions">
         <h2>Attractions</h2>
         <div>
-          <div class="attraction">
-            <h3>Chocolate Fondue Ride</h3>
-            <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Chocolate Fondue Ride">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+          <a href="/attractions/chocolate-fondue-ride">
+            <div class="attraction">
+              <h3>Chocolate Fondue Ride</h3>
+              <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Chocolate Fondue Ride">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+              </p>
+            </div>
+          </a>
           <div class="attraction">
             <h3>Sugar Mountain Rollercoaster</h3>
             <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Sugar Mountain Rollercoaster">
