--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -15,10 +15,9 @@
       <a href="/">
         <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
       </a>
-      <!-- TODO: Change to disabled link -->
-      <a href="/attractions">Attractions</a>
-      <!-- TODO: Change to disabled link -->
-      <a href="/tickets">Tickets</a>
+      <a href="/">Home</a>
+      <span class="disabled-link">Attractions</span>
+      <span class="disabled-link">Tickets</span>
       <a href="/shop">Shop</a>
       <span>Profile</span>
       <button>Contact us</button>
