fix: Categories are labeled as products

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Shop</title>
+    <title>Candyland Shop</title>
     <!-- Link to stylesheets  -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
@@ -37,24 +37,24 @@
 
       <section id="categories">
         <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for product image">
-          <h3>Product</h3>
-          <p>Product description</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for product image">
-          <h3>Product</h3>
-          <p>Product description</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for product image">
-          <h3>Product</h3>
-          <p>Product description</p>
+          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+          <h3>Category 1</h3>
+          <p>Category description</p>
         </div>
         <div>
           <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-          <h3>Product</h3>
-          <p>Product description</p>
+          <h3>Category 2</h3>
+          <p>Category description</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+          <h3>Category 3</h3>
+          <p>Category description</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+          <h3>Category 4</h3>
+          <p>Category description</p>
         </div>
       </section>
 
