fix: Link surrounding div makes blank screen area clickable
Fixed by removing the link from the `div` and adding it separately to `img` and `p` tags

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
   <body>
     <!-- Menu bar -->
     <nav>
-      <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
+      <a href="/">
+        <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
+      </a>
       <a href="/">Home</a>
       <span class="disabled-link">Attractions</span>
       <span class="disabled-link">Tickets</span>
@@ -45,12 +47,15 @@
       <section id="attractions">
         <h2>Attractions</h2>
         <div>
-          <a href="/attractions/chocolate-fondue-ride">
-            <div class="attraction">
+          <div class="attraction">
+            <a href="/attractions/chocolate-fondue-ride">
               <h3>Chocolate Fondue Ride</h3>
               <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Chocolate Fondue Ride">
+            </a>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                <a href="/attractions/chocolate-fondue-ride">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                </a>
               </p>
             </div>
           </a>
