ux: Add initial base styles, fonts, and logo

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,16 @@
     <!-- Link to favicon and stylesheets  -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Link to favicon -->
   </head>
   <body>
     <!-- Menu bar -->
     <nav>
-      <a href="/">
-        <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
+      <a class="logo-font" href="/">
+        Candyland
       </a>
       <a href="/">Home</a>
       <span class="disabled-link">Attractions</span>
