ux: Add layout for header section on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Menu bar -->
-    <nav>
+    <nav class="navbar x-constraint">
       <a class="logo-font" href="/">
         Candyland
       </a>
@@ -29,9 +29,17 @@
     <hr>
 
     <main>
-      <header>
-        <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
-        <button id="tickets">Buy tickets</button>
+      <header class="header">
+        <img
+          class="header"
+          src="https://via.placeholder.com/1200x200.png"
+          alt="Placeholder for header image"
+        >
+        <div class="content">
+          <div class="x-constraint">
+            <button id="tickets">Buy tickets</button>
+          </div>
+        </div>
       </header>
 
       <hr>
