ux: Add layout to navbar

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <!-- Menu bar -->
-    <nav class="navbar x-constraint">
-      <a class="logo-font" href="/">
-        Candyland
-      </a>
+    <nav class="navbar x-constraint row">
+      <div class="flex-grow">
+        <a class="logo-font" href="/">Candyland</a>
+      </div>
       <a href="/">Home</a>
       <span class="disabled-link">Attractions</span>
       <span class="disabled-link">Tickets</span>
