refactor: Create initial variables, remove utility classes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Menu bar -->
-    <nav class="navbar x-constraint row">
+    <nav class="navbar x-constraint">
       <div class="flex-grow">
         <a class="logo-font" href="/">Candyland</a>
       </div>
@@ -40,10 +40,8 @@
         </div>
       </header>
 
-      <hr>
-
       <!-- Welcome to Candyland -->
-      <section id="welcome">
+      <section id="welcome" class="x-constraint">
         <h1>Candyland</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -53,7 +51,7 @@
 
       <hr>
 
-      <section id="attractions">
+      <section id="attractions" class="column x-constraint section-y-padding">
         <h2>Attractions</h2>
         <div>
           <div class="attraction">
