--- a/public/index.html
+++ b/public/index.html
@@ -84,21 +84,23 @@
             </div>
           </div>
         </div>
-
       </section>
 
-      <hr>
-
+      <!-- Social section -->
       <section id="social">
-        <div>
-          <h3>
-            Comments and reviews
-          </h3>
-        </div>
-        <div>
-          <h3>
-            Park news
-          </h3>
+        <div class="content x-constraint">
+          <div>
+            <h3>
+              Comments and reviews
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore, vero?</p>
+          </div>
+          <div>
+            <h3>
+              Park news
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore, vero?</p>
+          </div>
         </div>
       </section>
 
