--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Menu bar -->
     <nav class="x-constraint navbar">
-      <div>
+      <div class="content">
         <div class="flex-grow">
           <a class="logo-font" href="/">Candyland</a>
         </div>
@@ -104,43 +104,43 @@
         </div>
       </section>
 
-      <hr>
-
       <footer>
-        <div>
-          <h4>Things to do</h4>
-          <ul>
-            <li>Lorem</li>
-            <li>Ipsum</li>
-            <li>Dolor sit amet</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Plan your visit</h4>
-          <ul>
-            <li>Duis aute</li>
-            <li>Irure dolor</li>
-            <li>In reprehenderit in voluptate</li>
-            <li>Totam rem aperiam</li>
-            <li>Anim id est laborum</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Support</h4>
-          <ul>
-            <li>Excepteur</li>
-            <li>Sint occeacat</li>
-            <li>Cupidatat non proident</li>
-            <li>Adipisci velit</li>
-          </ul>
-        </div>
-        <div>
-          <h4>About us</h4>
-          <ul>
-            <li>Neque porro</li>
-            <li>Quisquam est</li>
-            <li>Qui dolorem ipsum</li>
-          </ul>
+        <div class="content x-constraint">
+          <div>
+            <h4>Things to do</h4>
+            <ul>
+              <li>Lorem</li>
+              <li>Ipsum</li>
+              <li>Dolor sit amet</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Plan your visit</h4>
+            <ul>
+              <li>Duis aute</li>
+              <li>Irure dolor</li>
+              <li>In reprehenderit in voluptate</li>
+              <li>Totam rem aperiam</li>
+              <li>Anim id est laborum</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Support</h4>
+            <ul>
+              <li>Excepteur</li>
+              <li>Sint occeacat</li>
+              <li>Cupidatat non proident</li>
+              <li>Adipisci velit</li>
+            </ul>
+          </div>
+          <div>
+            <h4>About us</h4>
+            <ul>
+              <li>Neque porro</li>
+              <li>Quisquam est</li>
+              <li>Qui dolorem ipsum</li>
+            </ul>
+          </div>
         </div>
       </footer>
     </main>
