ux: Refactor page hero's into reusable class; fix navbar bottom margin

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <!-- Menu bar -->
-    <nav class="x-constraint navbar">
-      <div class="content">
+    <nav class="navbar">
+      <div class="content x-constraint">
         <div class="flex-grow">
           <a class="logo-font" href="/">Candyland</a>
         </div>
@@ -26,7 +26,6 @@
         <span>Profile</span>
         <button>Contact us</button>
       </div>
-
     </nav>
 
     <main>
@@ -45,7 +44,7 @@
 
       <!-- Welcome to Candyland -->
       <section id="welcome" class="x-constraint">
-        <div>
+        <div class="hero x-constraint">
           <h1>Candyland</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
