--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -10,27 +10,30 @@
     <!-- Link to favicon -->
   </head>
   <body>
-    <!-- Menu bar -->
-    <nav>
-      <a href="/">
-        <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
-      </a>
-      <a href="/">Home</a>
-      <span class="disabled-link">Attractions</span>
-      <span class="disabled-link">Tickets</span>
-      <a href="/shop">Shop</a>
-      <span>Profile</span>
-      <button>Contact us</button>
+  <!-- Menu bar -->
+    <nav class="navbar">
+      <div class="content x-constraint">
+        <div class="flex-grow">
+          <a class="logo-font" href="/">Candyland</a>
+        </div>
+        <a href="/">Home</a>
+        <span class="disabled-link">Attractions</span>
+        <span class="disabled-link">Tickets</span>
+        <a href="/shop">Shop</a>
+        <span>Profile</span>
+        <button>Contact us</button>
+      </div>
     </nav>
-
-    <hr>
 
     <main>
       <header>
-        <h1>Candyland Shop</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-        </p>
+        <div class="hero x-constraint">
+          <h1>Candyland Shop</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </p>
+        </div>
+
       </header>
 
       <hr>
