ux: Add layout to shop header and categories sections

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -33,31 +33,30 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </p>
         </div>
-
       </header>
 
-      <hr>
-
       <section id="categories">
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-          <h3>Category 1</h3>
-          <p>Category description</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-          <h3>Category 2</h3>
-          <p>Category description</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-          <h3>Category 3</h3>
-          <p>Category description</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-          <h3>Category 4</h3>
-          <p>Category description</p>
+        <div class="wrapper x-constraint">
+          <div class="category">
+            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+            <h3>Category 1</h3>
+            <p>Category description</p>
+          </div>
+          <div class="category">
+            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+            <h3>Category 2</h3>
+            <p>Category description</p>
+          </div>
+          <div class="category">
+            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+            <h3>Category 3</h3>
+            <p>Category description</p>
+          </div>
+          <div class="category">
+            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
+            <h3>Category 4</h3>
+            <p>Category description</p>
+          </div>
         </div>
       </section>
 
