ux: Add layout to promotions section

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -60,16 +60,14 @@
         </div>
       </section>
 
-      <hr>
-
       <section id="promotions">
-        <h3>Promotions</h3>
-        <p>
-          Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.
-        </p>
+        <div class="wrapper x-constraint">
+          <h3>Promotions</h3>
+          <p>
+            Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.
+          </p>
+        </div>
       </section>
-
-      <hr>
 
       <section id="category">
         <h2>Shop category</h2>
