ux: Import custom fonts into shop page

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -7,6 +7,7 @@
     <!-- Link to stylesheets  -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Link to favicon -->
   </head>
   <body>
