ux: Add layout to category section on shop page

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -71,28 +71,32 @@
       </section>
 
       <section id="category">
-        <h2>Shop category</h2>
-        <div>
-          <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-          <h3>
-            Product 1 name
-          </h3>
-          <p>In culpa qui officia deserunt mollit</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-          <h3>
-            Product 2 name
-          </h3>
-          <p>Do eiusmod tempor incididunt ut labore</p>
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-          <h3>
-            Product 3 name
-          </h3>
-          <p>Quis autem vel eum iure reprehenderit</p>
-        </div>
+        <div class="wrapper x-constraint">
+          <h2>Shop category</h2>
+          <div class="products-row">
+            <div class="product-card">
+              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
+              <h3>
+                Product 1 name
+              </h3>
+              <p>In culpa qui officia deserunt mollit</p>
+            </div>
+            <div class="product-card">
+              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
+              <h3>
+                Product 2 name
+              </h3>
+              <p>Do eiusmod tempor incididunt ut labore</p>
+            </div>
+            <div class="product-card">
+              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
+              <h3>
+                Product 3 name
+              </h3>
+              <p>Quis autem vel eum iure reprehenderit</p>
+            </div>
+          </div>
+          </div>
       </section>
 
       <hr>
