fix: Section padding for x and y axis swapped

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main>
-      <header>
+      <header class="landing">
         <img
           class="header"
           src="https://via.placeholder.com/1200x200.png"
