--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -7,23 +7,24 @@
     <!-- Link to stylesheets  -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Link to favicon -->
   </head>
   <body>
-    <!-- Menu bar -->
-    <nav>
-      <a href="/">
-        <img src="https://via.placeholder.com/128x32.png" alt="Placeholder for logo">
-      </a>
-      <a href="/">Home</a>
-      <span class="disabled-link">Attractions</span>
-      <span class="disabled-link">Tickets</span>
-      <a href="/shop">Shop</a>
-      <span>Profile</span>
-      <button>Contact us</button>
+  <!-- Menu bar -->
+    <nav class="navbar">
+      <div class="content x-constraint">
+        <div class="flex-grow">
+          <a class="logo-font" href="/">Candyland</a>
+          <a href="/">Home</a>
+          <span class="disabled-link">Attractions</span>
+          <span class="disabled-link">Tickets</span>
+          <a href="/shop">Shop</a>
+        </div>
+        <span>Profile</span>
+        <button>Contact us</button>
+      </div>
     </nav>
-
-    <hr>
 
     <main>
       <header>
