ux: Add layout to attraction hero section

--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -27,23 +27,27 @@
     </nav>
 
     <main>
-      <header>
-        <h1>Chocolate Fondue Ride</h1>
-        <img src="https://via.placeholder.com/1200x400.png" alt="Placeholder for attraction image">
-        <div>
-          <blockquote>
-            The chocolatey thrill of a lifetime!
-          </blockquote>
+      <header class="attraction-hero">
+        <div class="content x-constraint">
+          <h1>Chocolate Fondue Ride</h1>
+          <div class="quote-wrapper">
+            <div class="quote">
+              <blockquote>
+                The chocolatey thrill of a lifetime!
+              </blockquote>
+            </div>
+          </div>
         </div>
-        <div>
+      </header>
+
+      <section id="attraction-details">
+        <div class="x-constraint">
           <div id="attraction_restrictions">
             Thrill level: Scary! Age: 10 and up. Height: 120 cm and up.
           </div>
           <button id="tickets">Buy tickets</button>
         </div>
-      </header>
-
-      <hr>
+      </section>
 
       <section id="attraction_description">
         <h2>About the ride</h2>
