ux: Add layout to attraction overview section

--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -40,22 +40,24 @@
         </div>
       </header>
 
-      <section id="attraction-details">
-        <div class="x-constraint">
-          <div id="attraction_restrictions">
-            Thrill level: Scary! Age: 10 and up. Height: 120 cm and up.
+      <section id="attraction-overview">
+        <div class="content x-constraint">
+          <div id="attraction-restrictions">
+            <span>Thrill level: Scary!</span>
+            <span>Age: 10 and up</span>
+            <span>Height: 120 cm and up</span>
           </div>
           <button id="tickets">Buy tickets</button>
         </div>
       </section>
 
-      <section id="attraction_description">
+      <section id="attraction-description">
         <h2>About the ride</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
         </p>
         <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
-        <div id="attraction_details">
+        <div id="attraction-details">
           <ul>
             <li>Duration: 8 minutes</li>
             <li>Cost: 16 tickets</li>
