ux: Add layout to attraction section; remove reused els from main tag

--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -52,60 +52,67 @@
       </section>
 
       <section id="attraction-description">
-        <h2>About the ride</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-        </p>
-        <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
-        <div id="attraction-details">
-          <ul>
-            <li>Duration: 8 minutes</li>
-            <li>Cost: 16 tickets</li>
-            <li>...</li>
-          </ul>
+        <div class="content x-constraint">
+          <div class="copy">
+            <h2>About the ride</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+            </p>
+            <div class="details">
+              <ul>
+                <li>Duration: 8 minutes</li>
+                <li>Cost: 16 tickets</li>
+                <li>Maximum speed: 20km/h</li>
+              </ul>
+            </div>
+          </div>
+          <figure>
+            <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
+            <figcaption>First-person perspective photo of the ride.</figcaption>
+          </figure>
         </div>
       </section>
-
-      <!-- Footer: Copy from Home page -->
-      <footer>
-        <div class="content x-constraint">
-          <div>
-            <h4>Things to do</h4>
-            <ul>
-              <li>Lorem</li>
-              <li>Ipsum</li>
-              <li>Dolor sit amet</li>
-            </ul>
-          </div>
-          <div>
-            <h4>Plan your visit</h4>
-            <ul>
-              <li>Duis aute</li>
-              <li>Irure dolor</li>
-              <li>In reprehenderit in voluptate</li>
-              <li>Totam rem aperiam</li>
-              <li>Anim id est laborum</li>
-            </ul>
-          </div>
-          <div>
-            <h4>Support</h4>
-            <ul>
-              <li>Excepteur</li>
-              <li>Sint occeacat</li>
-              <li>Cupidatat non proident</li>
-              <li>Adipisci velit</li>
-            </ul>
-          </div>
-          <div>
-            <h4>About us</h4>
-            <ul>
-              <li>Neque porro</li>
-              <li>Quisquam est</li>
-              <li>Qui dolorem ipsum</li>
-            </ul>
-          </div>
-        </div>
-      </footer>
     </main>
+
+    <!-- Footer: Copy from Home page -->
+    <footer>
+      <div class="content x-constraint">
+        <div>
+          <h4>Things to do</h4>
+          <ul>
+            <li>Lorem</li>
+            <li>Ipsum</li>
+            <li>Dolor sit amet</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Plan your visit</h4>
+          <ul>
+            <li>Duis aute</li>
+            <li>Irure dolor</li>
+            <li>In reprehenderit in voluptate</li>
+            <li>Totam rem aperiam</li>
+            <li>Anim id est laborum</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Support</h4>
+          <ul>
+            <li>Excepteur</li>
+            <li>Sint occeacat</li>
+            <li>Cupidatat non proident</li>
+            <li>Adipisci velit</li>
+          </ul>
+        </div>
+        <div>
+          <h4>About us</h4>
+          <ul>
+            <li>Neque porro</li>
+            <li>Quisquam est</li>
+            <li>Qui dolorem ipsum</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
