ux: Add styling to hero image on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,12 @@
       <header class="landing">
         <img
           class="header"
-          src="https://via.placeholder.com/1200x200.png"
-          alt="Placeholder for header image"
+          src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_2000/v1656039885/wm-theme-park/oleg-didenko-LCm6u4DD-4w-unsplash_i1otap.jpg"
+          alt="Image of colourful buildings overlooking a pond"
         >
         <div class="content">
           <div class="x-constraint">
-            <button id="tickets">Buy tickets</button>
+            <button id="tickets" class="primary-button">Buy tickets</button>
           </div>
         </div>
       </header>
