--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -39,23 +39,29 @@
       <section id="categories">
         <div class="wrapper x-constraint">
           <div class="category">
-            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Category 1</h3>
+            <img
+              src="https://via.placeholder.com/200x200.png"
+              alt="Placeholder for category image"
+            >
+            <h3>Treats</h3>
+            <p>Category description</p>
+          </div>
+          <div class="category">
+            <img
+              src="https://via.placeholder.com/200x200.png"
+              alt="Placeholder for category image"
+            >
+            <h3>Apparel</h3>
             <p>Category description</p>
           </div>
           <div class="category">
             <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Category 2</h3>
+            <h3>Toys</h3>
             <p>Category description</p>
           </div>
           <div class="category">
             <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Category 3</h3>
-            <p>Category description</p>
-          </div>
-          <div class="category">
-            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Category 4</h3>
+            <h3>Cards</h3>
             <p>Category description</p>
           </div>
         </div>
