ux: Add styles to navbar on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <a href="/shop">Shop</a>
         </div>
         <span>Profile</span>
-        <button>Contact us</button>
+        <button class="outlined-button">Contact us</button>
       </div>
     </nav>
 
