ux: Add styles to banner on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </header>
 
       <!-- Welcome to Candyland -->
-      <section id="welcome" class="x-constraint">
+      <section id="welcome" class="">
         <div class="hero x-constraint">
           <h1>Candyland</h1>
           <p>
