--- a/public/index.html
+++ b/public/index.html
@@ -1,147 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candyland</title>
-    <!-- Link to favicon and stylesheets  -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Link to favicon -->
-  </head>
-  <body>
-    <!-- Menu bar -->
-    <nav class="navbar">
-      <div class="content x-constraint">
-        <div class="flex-grow">
-          <a class="logo-font" href="/">Candyland</a>
-          <a href="/">Home</a>
-          <span class="disabled-link">Attractions</span>
-          <span class="disabled-link">Tickets</span>
-          <a href="/shop">Shop</a>
-        </div>
-        <span>Profile</span>
-        <button class="outlined-button">Contact us</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Candyland</title>
+  <!-- Link to favicon and stylesheets  -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  >
+  <!-- Link to favicon -->
+</head>
+<body>
+<!-- Menu bar -->
+<nav class="navbar">
+  <div class="content x-constraint">
+    <div class="flex-grow">
+      <a class="logo-font" href="/">Candyland</a>
+      <a href="/">Home</a>
+      <span class="disabled-link">Attractions</span>
+      <span class="disabled-link">Tickets</span>
+      <a href="/shop">Shop</a>
+    </div>
+    <span>Profile</span>
+    <button class="outlined-button">Contact us</button>
+  </div>
+</nav>
+
+<main>
+  <header class="landing">
+    <img
+      class="header"
+      src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_2000/v1656039885/wm-theme-park/oleg-didenko-LCm6u4DD-4w-unsplash_i1otap.jpg"
+      alt="Image of colourful buildings overlooking a pond"
+    >
+    <div class="content">
+      <div class="x-constraint">
+        <button id="tickets" class="primary-button">Buy tickets</button>
       </div>
-    </nav>
+    </div>
+  </header>
 
-    <main>
-      <header class="landing">
-        <img
-          class="header"
-          src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_2000/v1656039885/wm-theme-park/oleg-didenko-LCm6u4DD-4w-unsplash_i1otap.jpg"
-          alt="Image of colourful buildings overlooking a pond"
-        >
-        <div class="content">
-          <div class="x-constraint">
-            <button id="tickets" class="primary-button">Buy tickets</button>
-          </div>
-        </div>
-      </header>
+  <!-- Welcome to Candyland -->
+  <section id="welcome" class="">
+    <div class="hero x-constraint">
+      <h1 class="h1">Come taste the excitement</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dictum a turpis vitae efficitur. Nunc quis ligula
+        sem. Aliquam in dictum quam. In egestas iaculis metus ut blandit. Quisque et dolor in dolor mollis volutpat ac a
+        lectus. Maecenas fermentum laoreet libero, vel viverra risus blandit sit amet.
+      </p>
+    </div>
+  </section>
 
-      <!-- Welcome to Candyland -->
-      <section id="welcome" class="">
-        <div class="hero x-constraint">
-          <h1>Candyland</h1>
+  <!-- Attractions section -->
+  <section id="attractions" class="column">
+    <div class="wrapper x-constraint">
+      <h2 class="h2">Attractions</h2>
+      <div class="attractions">
+        <div class="attraction">
+          <a href="/attractions/chocolate-fondue-ride">
+            <h3 class="h3">Chocolate Fondue Rollercoaster</h3>
+            <img
+              src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
+              alt="Placeholder for Chocolate Fondue Ride"
+            >
+          </a>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </p>
         </div>
-      </section>
-
-      <!-- Attractions section -->
-      <section id="attractions" class="column">
-        <div class="wrapper x-constraint">
-          <h2>Attractions</h2>
-          <div class="attractions">
-            <div class="attraction">
-              <a href="/attractions/chocolate-fondue-ride">
-                <h3>Chocolate Fondue Ride</h3>
-                <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Chocolate Fondue Ride">
-              </a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-              </p>
-            </div>
-            <div class="attraction">
-              <h3>Sugar Mountain Rollercoaster</h3>
-              <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Sugar Mountain Rollercoaster">
-              <p>
-                Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet.
-              </p>
-            </div>
-            <div class="attraction">
-              <h3>Candyland Factory Tour</h3>
-              <img src="https://via.placeholder.com/250x250.png" alt="Placeholder for Candyland Factory Tour">
-              <p>
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-              </p>
-            </div>
-          </div>
+        <div class="attraction">
+          <h3 class="h3">Gummy Elephants Ride</h3>
+          <img
+            src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/philipp-potocnik-nmVzQqgl-pc-unsplash_acn5ab.jpg"
+            alt="Placeholder for Chocolate Fondue Ride"
+          >
+          <p>
+            Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet.
+          </p>
         </div>
-      </section>
-
-      <!-- Social section -->
-      <section id="social">
-        <div class="content x-constraint">
-          <div>
-            <h3>
-              Comments and reviews
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore, vero?</p>
-          </div>
-          <div>
-            <h3>
-              Park news
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore, vero?</p>
-          </div>
+        <div class="attraction">
+          <h3 class="h3">Candyland Factory Tour</h3>
+          <img
+            src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/reki-woo-1GQ8mmT_mxs-unsplash_xbiwft.jpg"
+            alt="Placeholder for Chocolate Fondue Ride"
+          >          <p>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+          </p>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
 
-      <footer>
-        <div class="content x-constraint">
-          <div>
-            <h4>Things to do</h4>
-            <ul>
-              <li>Lorem</li>
-              <li>Ipsum</li>
-              <li>Dolor sit amet</li>
-            </ul>
-          </div>
-          <div>
-            <h4>Plan your visit</h4>
-            <ul>
-              <li>Duis aute</li>
-              <li>Irure dolor</li>
-              <li>In reprehenderit in voluptate</li>
-              <li>Totam rem aperiam</li>
-              <li>Anim id est laborum</li>
-            </ul>
-          </div>
-          <div>
-            <h4>Support</h4>
-            <ul>
-              <li>Excepteur</li>
-              <li>Sint occeacat</li>
-              <li>Cupidatat non proident</li>
-              <li>Adipisci velit</li>
-            </ul>
-          </div>
-          <div>
-            <h4>About us</h4>
-            <ul>
-              <li>Neque porro</li>
-              <li>Quisquam est</li>
-              <li>Qui dolorem ipsum</li>
-            </ul>
-          </div>
-        </div>
-      </footer>
-    </main>
-  </body>
+  <!-- Social section -->
+  <section id="social">
+    <div class="content x-constraint">
+      <div>
+        <h3>
+          Comments and reviews
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure
+          maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore,
+          vero?</p>
+      </div>
+      <div>
+        <h3>
+          Park news
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure
+          maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore,
+          vero?</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="content x-constraint">
+      <div>
+        <h4>Things to do</h4>
+        <ul>
+          <li>Lorem</li>
+          <li>Ipsum</li>
+          <li>Dolor sit amet</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Plan your visit</h4>
+        <ul>
+          <li>Duis aute</li>
+          <li>Irure dolor</li>
+          <li>In reprehenderit in voluptate</li>
+          <li>Totam rem aperiam</li>
+          <li>Anim id est laborum</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Support</h4>
+        <ul>
+          <li>Excepteur</li>
+          <li>Sint occeacat</li>
+          <li>Cupidatat non proident</li>
+          <li>Adipisci velit</li>
+        </ul>
+      </div>
+      <div>
+        <h4>About us</h4>
+        <ul>
+          <li>Neque porro</li>
+          <li>Quisquam est</li>
+          <li>Qui dolorem ipsum</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</main>
+</body>
 </html>
