ux: Add styling to social/comments/reviews section of landing page

--- a/public/index.html
+++ b/public/index.html
@@ -100,16 +100,16 @@
   <!-- Social section -->
   <section id="social">
     <div class="content x-constraint">
-      <div>
-        <h3>
+      <div class="card">
+        <h3 class="h3">
           Comments and reviews
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure
           maxime mollitia nesciunt nihil non perspiciatis, provident, quasi repellendus tempore ut voluptatum. Labore,
           vero?</p>
       </div>
-      <div>
-        <h3>
+      <div class="card">
+        <h3 class="h3">
           Park news
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci animi aperiam dolore ducimus est iure
