ux: Add styling to footer

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400;700&family=Nunito:wght@200;300;400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Lobster+Two:wght@400&family=Nunito:wght@400;600;700&display=swap"
     rel="stylesheet"
   >
   <!-- Link to favicon -->
@@ -122,7 +122,7 @@
   <footer>
     <div class="content x-constraint">
       <div>
-        <h4>Things to do</h4>
+        <h4 class="h4">Things to do</h4>
         <ul>
           <li>Lorem</li>
           <li>Ipsum</li>
@@ -130,7 +130,7 @@
         </ul>
       </div>
       <div>
-        <h4>Plan your visit</h4>
+        <h4 class="h4">Plan your visit</h4>
         <ul>
           <li>Duis aute</li>
           <li>Irure dolor</li>
@@ -140,7 +140,7 @@
         </ul>
       </div>
       <div>
-        <h4>Support</h4>
+        <h4 class="h4">Support</h4>
         <ul>
           <li>Excepteur</li>
           <li>Sint occeacat</li>
@@ -149,7 +149,7 @@
         </ul>
       </div>
       <div>
-        <h4>About us</h4>
+        <h4 class="h4">About us</h4>
         <ul>
           <li>Neque porro</li>
           <li>Quisquam est</li>
