ux: Add alt text to landing page images, refactor banner/colors

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   </header>
 
   <!-- Welcome to Candyland -->
-  <section id="welcome" class="">
+  <section id="welcome" class="banner">
     <div class="hero x-constraint">
       <h1 class="h1">Come taste the excitement</h1>
       <p>
@@ -64,32 +64,33 @@
       <div class="attractions">
         <div class="attraction">
           <a href="/attractions/chocolate-fondue-ride">
-            <h3 class="h3">Chocolate Fondue Rollercoaster</h3>
             <img
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
-              alt="Placeholder for Chocolate Fondue Ride"
+              alt="Image of people going down a steep roller coaster"
             >
+            <h3 class="h3">Chocolate Fondue Rollercoaster</h3>
           </a>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </p>
         </div>
         <div class="attraction">
-          <h3 class="h3">Gummy Elephants Ride</h3>
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/philipp-potocnik-nmVzQqgl-pc-unsplash_acn5ab.jpg"
-            alt="Placeholder for Chocolate Fondue Ride"
+            alt="Image of ride with colourful elephant cars"
           >
+          <h3 class="h3">Gummy Elephants Ride</h3>
           <p>
             Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet.
           </p>
         </div>
         <div class="attraction">
-          <h3 class="h3">Candyland Factory Tour</h3>
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/reki-woo-1GQ8mmT_mxs-unsplash_xbiwft.jpg"
-            alt="Placeholder for Chocolate Fondue Ride"
-          >          <p>
+            alt="Image of factory door entrance with big mouth overtop the door"
+          >
+          <h3 class="h3">Candyland Factory Tour</h3>
+          <p>
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
           </p>
         </div>
